added local loadbalancing